# remote_client

./: .gitignore  AppShutdown.cpp  AppShutdown.h  AudioClient.cpp  AudioClient.h  AudioDecoder.cpp  AudioDecoder.h  AudioPacket.h  AudioPacketTypes.h  AudioReceiver.cpp  AudioReceiver.h  AudioUdpReceiver.cpp  AudioUdpReceiver.h  CMakeLists.txt  ConcreteJitterBuffer.h  Crc32.cpp  Crc32.h  DebugLog.cpp  DebugLog.h  DisplaySyncClient.cpp  DisplaySyncClient.h  GameBarSuppressor.cpp  GameBarSuppressor.h  Globals.cpp  Globals.h  InputSender.cpp  InputSender.h  JitterBuffer.h  KeyboardSender.cpp  KeyboardSender.h  ModeSyncClient.cpp  ModeSyncClient.h  Nvdec.cpp  Nvdec.h  NvdecKernels.cu  NvdecKernels.h  README.md  ReedSolomon.cpp  ReedSolomon.h  RemoteKeyboard.cpp  (+27 more)
Shader/: FullScreenQuadVS.hlsl  NV12ToRGBA709Full.hlsl  NV12ToRGBPS.hlsl  OverlayPS.hlsl  YUV444ToRGBA709Full.hlsl
concurrentqueue_x64-windows/: CONTROL
concurrentqueue_x64-windows/share/unofficial-concurrentqueue/: unofficial-concurrentqueue-config.cmake  unofficial-concurrentqueue-targets.cmake
enet_x64-windows/debug/lib/: enet.lib
enet_x64-windows/lib/: enet.lib
remote_client/: AppShutdown.h  AudioClient.cpp  CMakeLists.txt  DebugLog.cpp  DebugLog.h  ReedSolomon.h  TimeSyncClient.cpp  main.cpp  main.h  nvdec.h  window.cpp  window.h
remote_client/Shader/: OverlayPS.hlsl  OverlayVS.hlsl  TransparentQuadPS.hlsl
remote_client/concurrentqueue_x64-windows/include/concurrentqueue/: concurrentqueue.h
remote_client/concurrentqueue_x64-windows/share/concurrentqueue/: vcpkg.spdx.json  vcpkg_abi_info.txt
remote_client/directx/: D3D12TokenizedProgramFormat.hpp  d3d12.h  d3d12.idl  d3d12compatibility.h  d3d12sdklayers.h  d3d12sdklayers.idl  d3d12video.h  d3d12video.idl  d3dcommon.h  d3dcommon.idl  d3dx12_core.h  d3dx12_pipeline_state_stream.h  d3dx12_state_object.h  dxcore.h  dxcore_interface.h  dxgicommon.idl  dxgiformat.idl
remote_client/enet_x64-windows/: CONTROL
remote_client/enet_x64-windows/include/enet/: callbacks.h  enet.h  list.h  protocol.h  types.h  unix.h  win32.h
remote_client/enet_x64-windows/share/enet/: vcpkg.spdx.json  vcpkg_abi_info.txt
remote_client/enet_x64-windows/share/unofficial-enet/: unofficial-enet-config.cmake
reports/: cppcheck_report.txt
src/NvCodec/: bmp_writer.hpp
